Customize symbols for the hw acceleration use case
Avoid clashes with the symbols from tracetools

Signed-off-by: Víctor Mayoral Vilches <v.mayoralv@gmail.com>

--- a/include/tracetools_acceleration/config.h.in
+++ b/include/tracetools_acceleration/config.h.in
@@ -1,3 +1,4 @@
+// Copyright 2021 Xilinx®
 // Copyright 2019 Robert Bosch GmbH
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,10 +13,10 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-#ifndef TRACETOOLS__CONFIG_H_
-#define TRACETOOLS__CONFIG_H_
+#ifndef TRACETOOLS_ACCELERATION__CONFIG_H_
+#define TRACETOOLS_ACCELERATION__CONFIG_H_
 
 #cmakedefine TRACETOOLS_DISABLED
 #cmakedefine TRACETOOLS_LTTNG_ENABLED
 
-#endif  // TRACETOOLS__CONFIG_H_
+#endif  // TRACETOOLS_ACCELERATION__CONFIG_H_
